First pass at adding Shifts into the scheduling
